--- a/python/src/StandardSpaceCrossEntropyImportanceSampling_doc.i.in
+++ b/python/src/StandardSpaceCrossEntropyImportanceSampling_doc.i.in
@@ -1,10 +1,6 @@
 %feature("docstring") OT::StandardSpaceCrossEntropyImportanceSampling
 "Standard Space Cross-Entropy Importance Sampling.
 
-.. warning::
-    This class is experimental and likely to be modified in future releases.
-    To use it, import the ``openturns.experimental`` submodule.
-
 Parameters
 ----------
 event : :class:`~openturns.ThresholdEvent`
@@ -78,7 +74,6 @@ PhysicalSpaceCrossEntropyImportanceSampling, CrossEntropyImportanceSampling, Cro
 Examples
 --------
 >>> import openturns as ot
->>> import openturns.experimental as otexp
 >>> ot.RandomGenerator.SetSeed(0)
 >>> distribution_R = ot.LogNormalMuSigma(300.0, 30.0, 0.0).getDistribution()
 >>> distribution_F = ot.Normal(75e3, 5e3)
@@ -90,7 +85,7 @@ Examples
 >>> vect = ot.RandomVector(distribution)
 >>> g = ot.CompositeRandomVector(model, vect)
 >>> event = ot.ThresholdEvent(g, ot.Less(), 0.0)
->>> myIS = otexp.StandardSpaceCrossEntropyImportanceSampling(event, 0.3)
+>>> myIS = ot.StandardSpaceCrossEntropyImportanceSampling(event, 0.3)
 >>> # run StandardSpaceCrossEntropyImportanceSampling
 >>> myIS.run()
 >>> myResult = myIS.getResult()"
