--- a/python/src/TruncatedOverMesh_doc.i.in
+++ b/python/src/TruncatedOverMesh_doc.i.in
@@ -1,10 +1,6 @@
 %feature("docstring") OT::TruncatedOverMesh
 "Truncated distribution over a mesh.
 
-.. warning::
-    This class is experimental and likely to be modified in future releases.
-    To use it, import the ``openturns.experimental`` submodule.
-
 Parameters
 ----------
 dist : :class:`~openturns.Distribution`
@@ -14,7 +10,7 @@ mesh : :class:`~openturns.Mesh`
 
 See also
 --------
-openturns.UniformOverMesh
+UniformOverMesh
 
 Notes
 -----
@@ -31,13 +27,12 @@ Examples
 Create a distribution:
 
 >>> import openturns as ot
->>> import openturns.experimental as otexp
 >>> f = ot.SymbolicFunction(['x', 'y'], ['sin(x) * sin(y)'])
 >>> levelSet = ot.LevelSet(f, ot.Less(), 0.2)
 >>> box = ot.Interval([-5.0] * 2, [5.0] * 2)
 >>> mesh = ot.LevelSetMesher([50]*2).build(levelSet, box, False)
 >>> dist = ot.Normal([0] * 2, [2] * 2)
->>> distribution = otexp.TruncatedOverMesh(dist, mesh)
+>>> distribution = ot.TruncatedOverMesh(dist, mesh)
 
 Draw a sample:
 
