--- a/python/src/LARS_doc.i.in
+++ b/python/src/LARS_doc.i.in
@@ -35,12 +35,12 @@ Examples
 >>> productBasis = ot.OrthogonalProductPolynomialFactory(polynomialCollection, enumerateFunction)
 >>> # experimental design
 >>> samplingSize = 75
->>> experiment = ot.LowDiscrepancyExperiment(ot.SobolSequence(), im.distributionX, samplingSize)
+>>> experiment = ot.LowDiscrepancyExperiment(ot.SobolSequence(), im.inputDistribution, samplingSize)
 >>> # generate sample
 >>> x = experiment.generate()
 >>> y = im.model(x)
 >>> # iso transfo
->>> xToU = ot.DistributionTransformation(im.distributionX, productBasis.getMeasure())
+>>> xToU = ot.DistributionTransformation(im.inputDistribution, productBasis.getMeasure())
 >>> u = xToU(x)
 >>> # build basis
 >>> degree = 10
