Fixed typos and add details in GaussKronrodRule_doc.i.in

--- a/python/src/GaussKronrodRule_doc.i.in
+++ b/python/src/GaussKronrodRule_doc.i.in
@@ -79,7 +79,7 @@ otherKronrodNodes : :class:`~openturns.Point`
 "
 // ---------------------------------------------------------------------
 %feature("docstring") OT::GaussKronrodRule::getOtherKronrodWeights
-"Accessor to the  positive nodes used in the Gauss-Kronrod approximation.
+"Accessor to the  weights used in the Gauss-Kronrod approximation.
 
 Returns
 -------
