--- a/python/src/CMakeLists.txt
+++ b/python/src/CMakeLists.txt
@@ -1015,6 +1015,7 @@ ot_add_python_module(testing testing_module.i
                     )
 
 ot_add_python_module(experimental experimental_module.i
+                     PointConditionalDistribution.i PointConditionalDistribution_doc.i.in
                      FieldToPointFunctionalChaosAlgorithm.i FieldToPointFunctionalChaosAlgorithm_doc.i.in
                      FieldFunctionalChaosResult.i FieldFunctionalChaosResult_doc.i.in
                      FieldFunctionalChaosSobolIndices.i FieldFunctionalChaosSobolIndices_doc.i.in
