--- a/lib/src/Uncertainty/Distribution/CMakeLists.txt
+++ b/lib/src/Uncertainty/Distribution/CMakeLists.txt
@@ -28,6 +28,7 @@ ot_add_source_file (ClaytonCopula.cxx)
 ot_add_source_file (ClaytonCopulaFactory.cxx)
 ot_add_source_file (CompositeDistribution.cxx)
 ot_add_source_file (DeconditionedDistribution.cxx)
+ot_add_source_file (PointConditionalDistribution.cxx)
 ot_add_source_file (CumulativeDistributionNetwork.cxx)
 ot_add_source_file (Dirac.cxx)
 ot_add_source_file (DiracFactory.cxx)
@@ -208,6 +209,7 @@ ot_install_header_file (ClaytonCopula.hxx)
 ot_install_header_file (ClaytonCopulaFactory.hxx)
 ot_install_header_file (CompositeDistribution.hxx)
 ot_install_header_file (DeconditionedDistribution.hxx)
+ot_install_header_file (PointConditionalDistribution.hxx)
 ot_install_header_file (CumulativeDistributionNetwork.hxx)
 ot_install_header_file (DiracFactory.hxx)
 ot_install_header_file (Dirac.hxx)
