--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -442,6 +442,7 @@ ot_pyinstallcheck_test (JointDistribution_std)
 ot_pyinstallcheck_test (JointDistribution_large)
 ot_pyinstallcheck_test (CompositeDistribution_std)
 ot_pyinstallcheck_test (DeconditionedDistribution_std)
+ot_pyinstallcheck_test (PointConditionalDistribution_std IGNOREOUT)
 ot_pyinstallcheck_test (CumulativeDistributionNetwork_std)
 ot_pyinstallcheck_test (Dirac_std)
 ot_pyinstallcheck_test (DiracFactory_std)
