CMake: FindPython wants Development.SABIModule

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -591,10 +591,10 @@ if (BUILD_PYTHON)
     endif ()
   endif ()
 
-  if (CMAKE_VERSION VERSION_LESS 3.24)
+  if (CMAKE_VERSION VERSION_LESS 3.26)
     find_package (Python 3.6 COMPONENTS Interpreter Development)
   else ()
-    find_package (Python 3.6 COMPONENTS Interpreter Development.Module)
+    find_package (Python 3.6 COMPONENTS Interpreter Development.Module Development.SABIModule)
   endif ()
 
   if (NOT TARGET Python::Module)
